driver: Refactoring and style guide

--- a/meson.build
+++ b/meson.build
@@ -73,6 +73,7 @@ kernel_src = [
     'kernel/src/arch/x86/user/fd/console.cpp',
     'kernel/src/arch/x86/user/syscall/syscall_entry.S',
     'kernel/src/arch/x86/user/elf_load.cpp',
+    'kernel/src/arch/x86/drivers/keyboard/ps.cpp',    
     'kernel/src/arch/x86/smp/smp.cpp',
     'kernel/src/arch/x86/smp/tls.cpp',
     'kernel/external/terminal/limine_term_ccompat.cpp',
